# audiocodec

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: aac.pcm  example.c  test.pcm  test.webm
include/: aac.h  amrnb.h  webm.h
src/: aac.c  amrnb.c  webm.c
thirdlib/ffmpeg/include/libavutil/: ffversion.h
thirdlib/ffmpeg/lib/: libfdk-aac.la  libopencore-amrnb.la  libopencore-amrwb.la
thirdlib/ffmpeg/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc  opencore-amrnb.pc  opencore-amrwb.pc
